name business header change

--- a/divya_temp/name_business.html
+++ b/divya_temp/name_business.html
@@ -11,8 +11,11 @@
 <body>
 	<div id="main">
 		<div id="header">
-			<a href="homepage.html"><img src="sidebysidelogo_header.svg" alt=""></a>
-			<a href="register.html" id="header_register">Existing user? Log in here</a>
+			<a href="/"><img src="/images/sidebysidelogo_header.svg" alt=""></a>
+			<div id="header_options">
+				<a href="" class="user_element"><img id="user_icon" src="/images/user168.svg" alt="">    Divya Prabhakar</a>
+				<a href="" class="user_element"><img id="logout_icon" src="/images/logout21.svg" alt=""></a>
+			</div>
 		</div>	
 		<div id="content">
 			<div id="center_container">
