--- a/divya_temp/price_range.html
+++ b/divya_temp/price_range.html
@@ -131,9 +131,9 @@ d3.select('#chart').append('svg')
             .style('fill', tempColor)
     })
 
-   .on('click', function(d) {
-       var object = d3.select(this);
-       selected = this;
+   .on('click', function(d, i) {
+       selected = i;
+       console.log(selected);
     })
 
 var hAxis = d3.svg.axis()
