--- a/divya_temp/wifi.html
+++ b/divya_temp/wifi.html
@@ -88,7 +88,6 @@
 var selected = null;
 var bardata = [40, 100];
 
-
 var height = 300,
     width = 800,
     barWidth = 50,
@@ -134,9 +133,9 @@ d3.select('#chart').append('svg')
             .style('fill', tempColor)
     })
 
-   .on('click', function(d) {
-       var object = d3.select(this);
-       selected = this;
+   .on('click', function(d, i) {
+       selected = i;
+       console.log(selected);
     })
 
 var hAxis = d3.svg.axis()
