--- a/divya_temp/map.html
+++ b/divya_temp/map.html
@@ -13,7 +13,7 @@
 		<script src="usaLow.js" type="text/javascript"></script>
         <script type="text/javascript">
 			var map;
-
+			var state;
 			AmCharts.ready(function() {
 			    map = new AmCharts.AmMap();
 			    map.pathToImages = "";
@@ -189,7 +189,21 @@
 			    // map.valueLegend = valueLegend;
 
 			    map.write("mapdiv");
+
+			    map.addListener("clickMapObject", function (event) {
+			    var location = (event.mapObject.id);
+			    state = location.replace("US-", "");
+
+
+
 			});
+
+			});
+
+			
+
+
+
 		</script>
     </head>
 
@@ -200,7 +214,7 @@
 				<a href="" class="user_element"><img id="user_icon" src="user168.svg" alt="">    Divya Prabhakar</a>
 				<a href="" class="user_element"><img id="logout_icon" src="logout21.svg" alt=""></a>
 			</div>
-		</div>
+		</div>s
 
 		<h1>Name of the new restaurant</h1>
 		<h3>Choose the location of your new restaurant.</h3>	
